--- a/src/components/HomeComponents/Header/Header.css
+++ b/src/components/HomeComponents/Header/Header.css
@@ -22,19 +22,20 @@
     display: grid;
     grid-template-columns: repeat(3, 4fr);
     align-items: center;
-    padding: 20px 0 40px 0;
+    padding: 20px 0 10px 0;
 }
 
 .Header-icons__social {
     display: flex;
     justify-content: flex-start;
     align-items: baseline;
-    margin-left: 50px;
+    margin-left: 40px;
 }
 
 .Header-icons__social-label {
     display: flex;
-    align-items: baseline;
+    align-items: center;
+    justify-content: center;
     text-align: left;
     font-size: 16px;
     font-weight: bold;
@@ -60,23 +61,33 @@
 .Header-icons__main {
     display: flex;
     justify-content: center;
+    align-items: center;
+}
+
+.Header-icons__main img {
+    margin-left: 15px;
 }
 
 .Header-icons__site {
     display: flex;
     justify-content: flex-end;
-    margin-right: 50px;
+    align-items: flex-end;
+    margin-right: 20px;
 }
 
 .Header-icons__site-link {
-    font-size: 1.7em;
-    margin: 0 15px;
+    font-size: 1em;
+    margin: 0 15px 0 0;
     position: relative;
     padding: 15px 15px;
 }
 
+.Header-icons__site-link:last-child {
+    margin: 0;
+}
+
 .Header-icons__site-link i {
-    color: white;
+    color: #ffffff;
 }
 
 .Header-icons__site-link span {
@@ -132,18 +143,18 @@
 
 .Header-content__info .title {
     color: #4caf50;
-    font-family: Brush Script MT, sans-serif;
-    font-size: 46px;
+    font-size: 50px;
     text-align: left;
     font-style: italic;
-    margin: 45px 0 10px 0;
+    font-family: Brush Script MT, sans-serif;
+    margin: 50px 0 5px 80px;
 }
 
 .Header-content__info .header {
     color: #ffffff;
-    font-size: 60px;
+    font-size: 62px;
     text-align: left;
-    font-weight: bold;
+    font-weight: 600;
     font-family: Montserrat;
     margin: 0 0 10px 0;
 }
@@ -153,7 +164,7 @@
     font-family: Montserrat;
     font-size: 16px;
     text-align: center;
-    margin: 5px 0 45px 0;
+    margin: 5px 0 50px 0;
 }
 
 .Header-content__right-icon {
@@ -182,7 +193,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0 0 100px 0;
+    padding: 0 0 125px 0;
 }
 
 .Header-readmore__button button {
